Fixing navbar alignment issue.

--- a/app/assets/stylesheets/components/navbar_modal.scss
+++ b/app/assets/stylesheets/components/navbar_modal.scss
@@ -60,6 +60,7 @@
       background-color: transparent;
       color: $primary;
       padding: 5vh 0;
+      height: 5vh;
       font-size: 5vh;
       line-height: 0;
       line-height: 0;
